--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,13 @@
-html, body {
+html,
+body {
   margin: 0 auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
-
 }
 
 .col {
   display: flex;
-  
   flex-direction: column;
   text-align: center;
   width: 100%;
@@ -30,7 +29,6 @@ input {
 
 #read {
   height: 40px;
- 
 }
 
 .head {
@@ -40,7 +38,6 @@ input {
 
 button {
   height: 3em;
-
 }
 
 a {
